
   o LFO: added Inverted Sine/Triangle/Sawtooth waveforms (iSin, iTri, iSaw at end of the Wave list)
      
   o Edit: value changes on Nth1/Nth2 parameter layers only select supported (meaningful) value ranges
      
   o fixed crash when TPD is used in combination with "MIDI Section Control" feature

   o fixed unintended Ctrl layer events in Edit screen

   o fixed CC Humanize Fx


MIDIboxSEQ V4.097
~~~~~~~~~~~~~~~~~

   o fixed "hanging gates" issue on CV_GATE_SR2..4
   
   o Morph Page, GP Button #6 now allows to store the current morphed values into the original track
     position (it takes over what you hear)
     
   o Recording: Auto Track selection based on incoming channel can now be enabled by assigning
     Jam MIDI Channel to "Auto" in MIDI Configuration Page.
     Track will be switched if a MIDI event has been received on a new channel, and in the last second
     no MIDI message has been received for the current selected track.
     
   o Edit Page: if parameter layer assigned to Root or Scale: print it at the right upper quarter

   o loopback tracks assigned to Bus1..4: parameter layers assigned to Root or Scale will control
     the global Root/Scale - this allows you to properly control *all* tracks which enabled
     FTS (Force-to-Scale)
     
   o Optimized synchronized/song pattern switches: now closer to next measure.
     In case of problems, please report log output after entering
        "set seq_pattern_log_load_time on"
     in MIOS Terminal, and playing a song (the pattern switch time will be shown)

   o CV Page: added new clock Rates 0.063PPQN (4 Bars), 0.125 PPQN (2 bars), 0.25 (1 bar), 0.5 (1/2 bar),
     + Stop/Start, Start Pulse and Stop Pulse function (e.g. a stop pulse can be used as a reset trigger)
     
   o Fixed CV channel assignments when using the 9-12 and 13-15 channel ranges

   o DUPL FX "First Channel" parameter now considered as intended (and documented) in alternate/random modes.